--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>For Erica 💌</title>
+  <title>For Erica 🖤🤍</title>
   <style>
     body {
       display: flex;
@@ -26,7 +26,7 @@
     .envelope {
       position: relative;
       width: 200px;
-      height: 120px;
+      height: 100px;
       background: #fff;
       border: 2px solid #d6336c;
       cursor: pointer;
@@ -91,30 +91,22 @@
     .f4 { bottom: 5%; right: 5%; }
     .f5 { top: 50%; left: -20px; }
     .f6 { top: 70%; right: -20px; }
+    .f7 { top: 30%; right: -10px; }
   </style>
 </head>
 <body>
-  <h1>I like you 💕</h1>
-  <h1>Erica</h1>
+  <h1>I hope yk that I like you </h1>
+  <h1>Erica🖤😜</h1>
 
   <div class="envelope" onclick="openEnvelope()">
-    <div class="heart">❤️</div>
+    <div class="heart">🤍🖤</div>
   </div>
 
   <div class="note" id="note">
-    <p>Hi Erica, 💌<br><br>
-    This is my little note just for you.  
+    <p>Hi ulit baks😜<br><br>
+    This is my little note just for you.🤞
     I really like you more than words can say! 💕</p>
   </div>
-
-  <!-- Flowers (free PNGs from Pixabay/Unsplash CDN) -->
-  <img src="https://i.ibb.co/VC0YZ9n/flower1.png" class="flower f1">
-  <img src="https://i.ibb.co/hR6gzGx/flower2.png" class="flower f2">
-  <img src="https://i.ibb.co/5n3dfdM/flower3.png" class="flower f3">
-  <img src="https://i.ibb.co/CBtxf9j/flower4.png" class="flower f4">
-  <img src="https://i.ibb.co/tCNFbhS/flower5.png" class="flower f5">
-  <img src="https://i.ibb.co/74tzVq7/flower6.png" class="flower f6">
-
   <audio id="song" src="song.mp3"></audio>
 
   <script>
