--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       z-index: 2;
     }
 
-    /* Flap */
+    /* Flap (pointing DOWN initially) */
     .flap {
       position: absolute;
       top: 0;
