--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       z-index: 2;
     }
 
-    /* Envelope container */
+    /* Envelope */
     .envelope {
       position: relative;
       width: 200px;
@@ -46,7 +46,7 @@
       height: 0;
       border-left: 100px solid transparent;
       border-right: 100px solid transparent;
-      border-bottom: 60px solid #d6336c;
+      border-top: 60px solid #d6336c;
       transform-origin: top;
       transition: transform 1s ease;
       z-index: 2;
